[package]
name = "yex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm = { path = "../vm" }
front = { path = "../front" }
rustyline = { version = "9.0.0", optional = true } 
[features]
repl = ["rustyline"]
default = []
